--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/formularioini.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/formularioini.html
@@ -11,7 +11,7 @@
     <title>CineFlix</title>
 </head>
 <body 
-background="Img/megamente.jpg" style="background-repeat: no-repeat;">
+background="/CineFlix/ProyectoWEB/Img/megamente.jpg" style="background-repeat: no-repeat;">
     <div class="container">
   
         <div class="submit">
