--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/accion.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/accion.html
@@ -143,10 +143,10 @@
         <div class="row">
             <div class="col-sm-12 col-md-4 ">
 
-                <a href="moon.html">
-                    <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/Img/moon.png" alt="Lights" style="width:100%">
+                <a href="aquaman.html">
+                    <img src="imagenes/imagen1.jpg" alt="Lights" style="width:100%">
                     <div class="caption">
-                        <p>Moon Knight</p>
+                        <p>aquaman</p>
                     </div>
                 </a>
             </div>
