--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/accion.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/accion.html
@@ -144,7 +144,7 @@
             <div class="col-sm-12 col-md-4 ">
 
                 <a href="aquaman.html">
-                    <img src="imagenes/imagen1.jpg" alt="Lights" style="width:100%">
+                    <img src="imagenes/imagen1.jp" alt="Lights" style="width:100%">
                     <div class="caption">
                         <p>aquaman</p>
                     </div>
@@ -159,6 +159,7 @@
                 </a>
 
             </div>
+            <div
            
         </div>
     </div>
