--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/accion.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/accion.html
@@ -143,10 +143,10 @@
         <div class="row">
             <div class="col-sm-12 col-md-4 ">
 
-                <a href="aquaman.html">
-                    <img src="imagenes/imagen1.jp" alt="Lights" style="width:100%">
+                <a href="moon.html">
+                    <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/Img/moon.png" alt="Lights" style="width:100%">
                     <div class="caption">
-                        <p>aquaman</p>
+                        <p>Moon</p>
                     </div>
                 </a>
             </div>
@@ -159,7 +159,16 @@
                 </a>
 
             </div>
-            <div
+            <div class="col-sm-12 col-md-4">
+                <a href="Aquaman.html">
+                    <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/Img/imagen1.jpg" alt="Lights" style="width: 100%">
+                    <div class="caption">
+                        <p>Aquaman 2</p>
+
+                    </div>
+                </a>
+
+            </div>
            
         </div>
     </div>
