Agregue otra pelicula

--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/animacion.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/animacion.html
@@ -91,6 +91,16 @@
                 </a>
 
             </div>
+            <div class="col-sm-12 col-md-4">
+                <a href="SpidermanAcross.html">
+                    <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/Img/spiderman.jpg" alt="Lights" style="width:100%">
+                    <div class="caption">
+                        <p>Turning Red</p>
+                    </div>
+                </a>
+            
+
+            </div>
             
         </div>
     </div>
