Aregle algunas cosas

--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/animacion.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/animacion.html
@@ -95,7 +95,7 @@
                 <a href="SpidermanAcross.html">
                     <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/Img/spiderman.jpg" alt="Lights" style="width:100%">
                     <div class="caption">
-                        <p>Turning Red</p>
+                        <p>Spider-Man: Across the Spider-Verse</p>
                     </div>
                 </a>
             
