--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/drama.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/drama.html
@@ -100,6 +100,15 @@
                 </a>
 
             </div>
+            <div class="col-sm-12 col-md-4">
+                <a href="Sonrie.html">
+                    <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/Img/sonrie.jpg" alt="Lights" style="width:100%">
+                    <div class="caption">
+                        <p>Sonrie</p>
+                    </div>
+                </a>
+
+            </div>
 
         </div>
     </div>
