--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/Batman.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/Batman.html
@@ -55,6 +55,9 @@
         <div class="edit">
         <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/img/batman.jpg" alt="Lights">
         </div>
+        <div class="container">
+          <div class="box"><iframe width="560" height="315" src="https://www.youtube.com/embed/fWQrd6cwJ0A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+        </div>
 
         <div class="container mt-3">
             <div class="btn">
