--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/morbius.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/morbius.html
@@ -57,7 +57,9 @@
     <div class="edit">
       <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/img/morbius.jpg" alt="Lights">
     </div>
-
+    <div class="container">
+      <div class="box"><iframe width="560" height="315" src="https://www.youtube.com/embed/C4XP8FSqTTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+    </div>
     <div class="container mt-3">
       <div class="btn">
         <button type="button" class="btn">Accion</button>
