--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/thor.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/thor.html
@@ -52,12 +52,14 @@
       <div class="col-sm-12 col-md-12">
         <h1>Thor Love and Thunder</h1>
       </div>
-
+    
     </div>
     <div class="edit">
       <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/img/Tor.webp" alt="Lights">
     </div>
-
+    <div class="container">
+      <div class="box"><iframe width="560" height="315" src="https://www.youtube.com/embed/Go8nTmfrQd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+    </div>
     <div class="container mt-3">
       <div class="btn">
         <button type="button" class="btn">Accion</button>
