--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/Index.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/Index.html
@@ -97,6 +97,31 @@
       </div>
     </div>
   </div>
+  <div class="container">
+    <h1>¿Quienes somos?</h1>
+    <div class="container">
+      <div class="card">
+        <figure>
+          <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/Img/usuario.jpg">
+        </figure>
+        <div class="contenido">
+          <h3>Fundador</h3>
+          <p>Kevin peredo</p>
+          <a href="#">Leer mas</a>
+        </div>
+      </div>
+      <div class="card">
+        <figure>
+          <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/Img/usuario.jpg">
+        </figure>
+        <div class="contenido">
+          <h3>Cofundador</h3>
+          <p>Maximo Fuentes</p>
+          <a href="#">Leer mas</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 <footer>
