--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/ironman.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/ironman.html
@@ -74,6 +74,20 @@
         <div class="progress-bar" style="width:79%">79%</div>
       </div>
     </div>
+    <form>
+      <p class="clasificacion">
+        <input id="radio1" type="radio" name="estrellas" value="5">
+        <label for="radio1">★</label>
+        <input id="radio2" type="radio" name="estrellas" value="4">
+        <label for="radio2">★</label>
+        <input id="radio3" type="radio" name="estrellas" value="3">
+        <label for="radio3">★</label>
+        <input id="radio4" type="radio" name="estrellas" value="2">
+        <label for="radio4">★</label>
+        <input id="radio5" type="radio" name="estrellas" value="1">
+        <label for="radio5">★</label>
+      </p>
+    </form>
     <div id="accordion">
       <div class="card">
         <div class="card-header">
