--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/Indexsesioniniciada.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/Indexsesioniniciada.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="ranking.html">Ranking</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="catalago.html">Categoria</a>
+            <a class="nav-link" href="catalogoapibd.html">Categoria</a>
           </li>
         </ul>
 
@@ -93,6 +93,31 @@
             compartida de nosotros y ustedes sobre las peliculas , buscamos saber cada detalle de cada
             film y con esta intencion tenemos la mision de evaluarla junto con ustedes. </p>
         </h3>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <h1>¿Quienes somos?</h1>
+    <div class="container">
+      <div class="card">
+        <figure>
+          <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/Img/usuario.jpg">
+        </figure>
+        <div class="contenido">
+          <h3>Fundador</h3>
+          <p>Kevin peredo</p>
+          <a href="#">Leer mas</a>
+        </div>
+      </div>
+      <div class="card">
+        <figure>
+          <img src="/CineFlixValidaciones-main/CineFlix/ProyectoWEB/Img/usuario.jpg">
+        </figure>
+        <div class="contenido">
+          <h3>Cofundador</h3>
+          <p>Maximo Fuentes</p>
+          <a href="#">Leer mas</a>
+        </div>
       </div>
     </div>
   </div>
