--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/perfilusuario.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/perfilusuario.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="ranking.html">Ranking</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="catalago.html">Categoria</a>
+                        <a class="nav-link" href="catalogoapibd.html">Categoria</a>
                     </li>
                     
 
@@ -46,7 +46,6 @@
                 <a class="nav-link" href="perfilusuario.html">Mi Perfil</a>
                             
     </nav>
-
 <div class="form">
       <ul class="tab-group">
         <center><h1>Mi Perfil</h1></center>
