--- a/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/ranking.html
+++ b/CineFlixValidaciones-main/CineFlix/ProyectoWEB/html/ranking.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="ranking.html">Ranking</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="catalago.html">Categoria</a>
+                        <a class="nav-link" href="catalogoapibd.html">Categoria</a>
                     </li>
                 </ul>
 
